--- a/main-style.css
+++ b/main-style.css
@@ -1,4 +1,4 @@
-* {
+.fondo, .grid-area-widgets, .careers {
     -webkit-user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
